describe your changes

--- a/css/style.css
+++ b/css/style.css
@@ -1054,7 +1054,10 @@ nav .nav .container .navegation button {
   font-weight: 600;
 }
 
+.ibrahim{
+    color: #FFDF20;
 
+}
 input {
   width: 100%;
   padding: 20px;
